--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,52 @@
 # Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
 .Python
 env/
 venv/
-.env
-
-# Pytest
-.pytest_cache/
-
-# Distribution / Packaging
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
+ENV/
 *.egg-info/
-.installed.cfg
-*.egg
+dist/
+build/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
-# VS Code
+# Vite
+frontend/dist/
+frontend/.vite/
+
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# MacOS
+# OS
 .DS_Store
+Thumbs.db
+desktop.ini
 
-# Secrets
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+debug_log.txt
+
+# Credentials (keep these private!)
 credentials.json
 client_secret.json
+token.json
+
+# Data (optional - uncomment if you don't want to commit data)
+# data/*.csv
