feat: Add bilingual support (ES/EN) and professional corporate design
- Implemented i18n system with Spanish/English language switcher
- Added translations for all UI elements, tooltips, and chart labels
- Translated country names (Switzerland -> Suiza, etc.)
- Redesigned UI to professional corporate dashboard style:
  * Removed all emojis and flashy animations
  * Minimalist black/violet color scheme
  * Clean typography and subtle effects
- Fixed chart rendering issues:
  * Increased margins to show all city labels (Zurich now visible)
  * Added interval={0} to YAxis to prevent label skipping
- Restructured project for Vercel deployment
- Created data update script for Numbeo API
- Added comprehensive documentation (DATA_UPDATE.md)

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,14 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # Vite
-frontend/dist/
-frontend/.vite/
+dist/
+.vite/
+
+# Vercel
+.vercel/
+
+# Temporary backup folder
+eliminar_temporal/
 
 # IDE
 .vscode/
